# ntb_location

./: .gitignore  Cargo.toml
.sqlx/: query-9d0a224a087706c9896d6e5ea2702d0a13ed6ff784b3d04a7b91cbea839a4076.json  query-a052a4fd2315748fe9e1c40778267a7897a8acd749f4a2e0202cd3a068216ea8.json
migrations/: 0001_init.down.sql  0001_init.up.sql
src/: main.rs
