[package]
name = "ntb_location"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["tokio", "tracing"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
once_cell = "1.20.1"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["sqlite", "chrono", "runtime-tokio"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["tracing", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
